added project page, presentation mode

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <img src="img/carpet3.jpg" alt="carpet3">
                     <div class="caption">
                         <p>
-                            <a href="#">long-ass caption long-ass caption long-ass caption long-ass caption long-ass caption long-ass caption long-ass caption long-ass caption long-ass caption long-ass caption long-ass caption long-ass caption long-ass caption long-ass caption long-ass caption</a>
+                            <a href="project.html">Cool Project</a>
                         </p>
                     </div>
                 </li>
@@ -75,7 +75,7 @@
                     <p class="numbers">2021</p>
                 </div>
                 <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
+                    <p class="letters"><a href="project.html">Cool Project</a></p>
                 </div>
             </div>
         </div>
@@ -214,8 +214,8 @@
 
 <!-- ---------------------------- ABOUT ----------------------------- -->
 
-<section id="about" class="about">
-    <div class="main">
+<section id="about" >
+    <div class="main project-overview">
         <p>
             Johanna Ulfsak is an artist and textile designer based in Tallinn, Estonia.
         </p>
@@ -227,11 +227,11 @@
         </p>
         <p>
             Her work is presented as artworks in gallery exhibitions and as non-seasonal collections of design and fashion objects. Ulfsak combines and mixes traditional weaving techniques with contemporary art concepts to create unique items and installations that challenge the established boundaries between disciplines. Since 2020 she is a guest lecturer at Estonian Academy of Arts. Her work is presented as artworks in gallery exhibitions and as non-seasonal collections of design and fashion objects. Ulfsak combines and mixes traditional weaving techniques with contemporary art concepts to create unique items and installations that challenge the established boundaries between disciplines. Since 2020 she is a guest lecturer at Estonian Academy of Arts.
-
         </p>
     </div>
     <div class="exhibitions">
         <p>
+            SELECTED PROJECTS & EXHIBITIONS <br><br>
             <span class="numbers">2019</span> NO FUN RUGS second collection FOLDED presentation, YEIJ Studio, Tallinn, EE <br>
             <span class="numbers">2019</span> Interwoven, Johanna Ulfsak & Kärt Ojavee, Espoo Museum of Modern Art, Espoo, FI<br>
             <span class="numbers">2019</span> Installation Live Streams S, Identity, 6th Riga International Textile and Fibre Art Triennial Exhibition, Riga, LV <br>
@@ -245,7 +245,7 @@
             <span class="numbers">2016</span> The Next Great Fashion Designer, Johanna Ulfsak & Alina Astrova, OVERDUIN & CO, LA, US
         </p>
     </div>
-
 </section>
+
 </body>
 </html>
