created mashup page, added zigzag

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="nav">
         <div class="navbar">
             <div class="item1">
-                <a href="#">mashup</a>
+                <a href="mashup.html">mashup</a>
             </div>
             <div class="item2">
                 <a href="#about">johanna ulfsak</a>
@@ -214,8 +214,8 @@
 
 <!-- ---------------------------- ABOUT ----------------------------- -->
 
-<section id="about" >
-    <div class="main project-overview">
+<section  >
+    <div id="about" class="main project-overview">
         <p>
             Johanna Ulfsak is an artist and textile designer based in Tallinn, Estonia.
         </p>
