--- a/mashup.html
+++ b/mashup.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="css/mashup.css"/>
         <script src="script.js" defer></script>
     </head>
     <body>
@@ -19,46 +19,11 @@
                     <a href="#">mashup</a>
                 </div>
                 <div class="item2">
-                    <a href="./index.html/#about">johanna ulfsak</a>
+                    <a href="index.html">johanna ulfsak</a>
                 </div>
                 <div class="item3">
                     <a href="javascript:;" onclick="toggleProjects()">index</a>
                 </div>
-            </div>
-        </section>
-
-        <!-- ---------------------------- CAROUSEL----------------------------- -->
-
-        <section aria-label="Selected Projects" class="gallery">
-            <div class="carousel" data-carousel>
-                <button class="carousel-button left" data-carousel-button="left">&#8592;</button>
-                <button class="carousel-button right" data-carousel-button="right">&#8594;</button>
-                <ul data-slides>
-                    <li class="slide" data-active>
-                        <img src="img/carpet3.jpg" alt="carpet3">
-                        <div class="caption">
-                            <p>
-                                Project picture #<span class="numbers">1</span>
-                            </p>
-                        </div>
-                    </li>
-                    <li class="slide">
-                            <img src="img/_DSD9279.jpg" alt="carpet3">
-                        <div class="caption">
-                            <p>
-                                Project picture #<span class="numbers">2</span>
-                            </p>
-                        </div>
-                    </li>
-                    <li class="slide">
-                        <img src="img/Photo29_28.jpg" alt="photo">
-                        <div class="caption">
-                            <p>
-                                Project picture #<span class="numbers">3</span>
-                            </p>
-                        </div>
-                    </li>
-                </ul>
             </div>
         </section>
 
@@ -209,46 +174,57 @@
         </div>
         </section>
 
-        <!-- ---------------------------- ABOUT ----------------------------- -->
 
-        <section id="about" class="project-overview">
-        <div class="main">
-            <p>
-                “Patterns” is an ongoing research on textile trends, overused ornaments and patterns. Combining together well known motifs with everyday life cliché’s, each rug is a unique eccentric composition.
-            </p>
-            <p>
-                People ask, Where did she come from?
-                SEÑORA was born in Venice. She’s an idea of WOMAN. An ideal WOMAN. She improves with age. People ask, What is she like?
-            </p>
-            <p>
-                She can take many forms. Individually She has as many faces as she has moods. As many aspects as the weather. SEÑORA is an ancient ride, shifts shapes and gears. Picks up a hitchhiker and turns up the laughter.
-                Collectively she might be a film. She might be a magazine, she might be a concert or a very good club. She might be an exhibition.
-                SEÑORA! is a FORCE!
-            </p>
-
-        </div>
-        <div class="tags">
-            <div class="tags1">
-                <p> year: <br>
-                    technique: <br>
-                    produced in: <br>
-                    materials: <br>
-                    size: <br>
-                    photo:
-                </p>
+        <!-- ---------------------------- MASHUP ----------------------------- -->
+        <section class="mashup-container">
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/carpet 1_jpeg.jpg" alt="carpet3"></a>
             </div>
-            <div class="tags2">
-                    <p>
-                    <span class="numbers">2020</span><br>
-                    Tibetan Hand-knotting Hand-dyed in abrash technique quality: Approx 125.000 knots / sqm <br>
-                    Kathmandu, Nepal <br>
-                    Hand-spun Himalayan wool, silk <br>
-                    variable dimensions <br>
-                    Ankit Shakya
-                    </p>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/carpet3.jpg" alt="carpet3"></a>
             </div>
-        </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/Screenshot 2021-09-06 at 19.13.03.png" alt="carpet3"></a>
+            </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/Screenshot 2021-09-15 at 00.33.39.png" alt="carpet3"></a>
+            </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/carpet3.jpg" alt="carpet3"></a>
+            </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/carpet3.jpg" alt="carpet3"></a>
+            </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/Photo29_28.jpg" alt="carpet3"></a>
+            </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/carpet3.jpg" alt="carpet3"></a>
+            </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/carpet3.jpg" alt="carpet3"></a>
+            </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/carpet3.jpg" alt="carpet3"></a>
+            </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/carpet3.jpg" alt="carpet3"></a>
+            </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/carpet3.jpg" alt="carpet3"></a>
+            </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/carpet3.jpg" alt="carpet3"></a>
+            </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/Screenshot 2021-12-10 at 10.52.02.png" alt="carpet3"></a>
+            </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/carpet3.jpg" alt="carpet3"></a>
+            </div>
+            <div class="mashup-item">
+                <a href="#"><div class="mashup-overlay"></div><img src="img/carpet3.jpg" alt="carpet3"></a>
+            </div>
         </section>
-
     </body>
 </html>
