begin adding projects
-project page index
-first project pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="nav">
         <div class="navbar">
             <div class="item1">
-                <a href="mashup.html">mashup</a>
+                <a href="./mashup.html">mashup</a>
             </div>
             <div class="item2">
                 <a href="#about">johanna ulfsak</a>
@@ -75,159 +75,90 @@
                     <p class="numbers">2021</p>
                 </div>
                 <div class="title">
-                    <p class="letters"><a href="project.html">Cool Project</a></p>
+                    <p class="letters"><a href="./floorplan.html">Floor Plan</a></p>
                 </div>
             </div>
         </div>
         <div class="project">
             <div class=project-items>
                 <div class="year">
-                    <p class="numbers">2021</p>
+                    <p class="numbers">2020</p>
                 </div>
                 <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
+                    <p class="letters"><a href="./senora.html">SEÑORA</a></p>
                 </div>
             </div>
         </div>
         <div class="project">
             <div class=project-items>
                 <div class="year">
-                    <p class="numbers">2021</p>
+                    <p class="numbers">2020</p>
                 </div>
                 <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
+                    <p class="letters"><a href="./patterns.html">Patterns</a></p>
                 </div>
             </div>
         </div>
         <div class="project">
             <div class=project-items>
                 <div class="year">
-                    <p class="numbers">2021</p>
+                    <p class="numbers">2018</p>
                 </div>
                 <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
+                    <p class="letters"><a href="./irony.html">Ongoing scarf collection “QUO VADIS, IRONY?</a></p>
                 </div>
             </div>
         </div>
         <div class="project">
             <div class=project-items>
                 <div class="year">
-                    <p class="numbers">2021</p>
+                    <p class="numbers">2018</p>
                 </div>
                 <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
+                    <p class="letters"><a href="./saveas.html">Save As</a></p>
                 </div>
             </div>
         </div>
         <div class="project">
             <div class=project-items>
                 <div class="year">
-                    <p class="numbers">2021</p>
+                    <p class="numbers">2016</p>
                 </div>
                 <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="project">
-            <div class=project-items>
-                <div class="year">
-                    <p class="numbers">2021</p>
-                </div>
-                <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="project">
-            <div class=project-items>
-                <div class="year">
-                    <p class="numbers">2021</p>
-                </div>
-                <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="project">
-            <div class=project-items>
-                <div class="year">
-                    <p class="numbers">2021</p>
-                </div>
-                <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="project">
-            <div class=project-items>
-                <div class="year">
-                    <p class="numbers">2021</p>
-                </div>
-                <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="project">
-            <div class=project-items>
-                <div class="year">
-                    <p class="numbers">2021</p>
-                </div>
-                <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="project">
-            <div class=project-items>
-                <div class="year">
-                    <p class="numbers">2021</p>
-                </div>
-                <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="project">
-            <div class=project-items>
-                <div class="year">
-                    <p class="numbers">2021</p>
-                </div>
-                <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="project">
-            <div class=project-items>
-                <div class="year">
-                    <p class="numbers">2021</p>
-                </div>
-                <div class="title">
-                    <p class="letters"><a href="#">Floor Plan</a></p>
+                    <p class="letters"><a href="./la.html">The Next Great Fashion Designer LA</a></p>
                 </div>
             </div>
         </div>
     </div>
-</section>
+    </section>
 
 <!-- ---------------------------- ABOUT ----------------------------- -->
 
 <section  >
     <div id="about" class="main project-overview">
         <p>
-            Johanna Ulfsak is an artist and textile designer based in Tallinn, Estonia.
+            Johanna Ulfsak is an artist and textile designer based in Tallinn, Estonia. Her work is presented as artworks in gallery exhibitions and as non - seasonal collections of design and fashion objects. Ulfsak combines and mixes traditional weaving techniques with contemporary art concepts to create unique items and installations that challenge the established boundaries between disciplines.
         </p>
         <p>
             <a href="#">contact</a>
         </p>
+        <div class="resume">
         <p>
-            Her work is presented as artworks in gallery exhibitions and as non-seasonal collections of design and fashion objects. Ulfsak combines and mixes traditional weaving techniques with contemporary art concepts to create unique items and installations that challenge the established boundaries between disciplines. Since 2020 she is a guest lecturer at Estonian Academy of Arts.
+            Johanna Ulfsak's work is sensitive and unique. She is interested in the fragility and toughness of textiles, and the contradictions between intimate craftsmanship and industrial production methods. Knowing how to appreciate slowness, the process of creating works on Johanna's looms is long and meditative. It involves the crossing of two threads, a warp and a weft, one running vertically and the other horizontally, one stretched and the other wavy and intertwined with the first. It is necessary to intertwine the two threads in order to create a textile; a fabric is created when the weft holds it together.
         </p>
         <p>
-            Her work is presented as artworks in gallery exhibitions and as non-seasonal collections of design and fashion objects. Ulfsak combines and mixes traditional weaving techniques with contemporary art concepts to create unique items and installations that challenge the established boundaries between disciplines. Since 2020 she is a guest lecturer at Estonian Academy of Arts. Her work is presented as artworks in gallery exhibitions and as non-seasonal collections of design and fashion objects. Ulfsak combines and mixes traditional weaving techniques with contemporary art concepts to create unique items and installations that challenge the established boundaries between disciplines. Since 2020 she is a guest lecturer at Estonian Academy of Arts.
+            If in ancient Greek legend Theseus followed a thread to escape an impossible maze, then the gaps between the threads painted by Johanna give us an opportunity to see the world from a different perspective. A narrative approach to textile history, human spiders weaving a net, hands and fingers wrapped around a thread, act as a kind of memory trigger. It reminds us that textiles have become a really inherent self-evident part of human existence. By weaving functional everyday objects — nets, screens, scarves, carpets — the artist interprets the experience of human life as part of a larger social fabric that is intertwined and inseparably interlinked.
         </p>
+        <p>
+            Textiles have long ceased to be a mere handicraft and women’s work, and using it as a medium,
+            Ulfsak points out that the hierarchy of materials and techniques based on masculine values still requires refuting and that stereotypical gender distinctions do nothing to help social development. Tenderness and fragility are not feminine signs of weakness but a natural part of human nature. Categories like “high” and “low” appear equally obsolete to the artist. In her works naive patterns are mixed with quotations from textile history, petty bourgeois ornaments with high fashion, antique with post-internet, humour with seriousness. In Johanna's works, it is important to notice and appreciate the manual work and the opportunity to reach non-verbal knowledge through physical action. A modern compulsion to constantly formulate cuts into the space surrounding manual work, and into its silence. Communicated as a text thread, Johanna's work can easily become evasive; material-based art must be seen with the eye and experienced by the body.
+        </p>
+        <p>For Japanese <a href="https://issuu.com/eestisisearhitektideliit/docs/sisu___line__3_issuu">medieval hermits and traveling poets</a> it was important to be in a place that supported poetry and music making, and in order to stay in that place, they had to constantly travel in search of it. Their creations were easy to carry, their dwellings were temporary, foldable, simple, based on the idea that “it does not make sense to erect permanent structures in an inconstant world, but the buildings themselves must flow with the flowing world. Only in this way can one truly remain still.” Equally, Johanna's wind-chime-like textile objects create an optical illusion of rotation, while actually being stationary. Weaving on looms, constantly moving to stay still, creates more space in this flowing world, and inspires us to do the same.
+        </p>
+        <p>
+            Text by Margit Säde <br>
+            Translation Alina Astrova</p>
+        </div>
     </div>
     <div class="exhibitions">
         <p>
