--- a/mashup.html
+++ b/mashup.html
@@ -10,13 +10,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/mashup.css"/>
         <script src="script.js" defer></script>
+        <script src="lightbox.js" defer></script>
     </head>
     <body>
         <!-- ------------------------ NAVBAR ---------------------------------- -->
         <section class="nav">
             <div class="navbar">
                 <div class="item1">
-                    <a href="#">mashup</a>
+                    <a href="./mashup.html">mashup</a>
                 </div>
                 <div class="item2">
                     <a href="index.html">johanna ulfsak</a>
@@ -27,7 +28,7 @@
             </div>
         </section>
 
-        <!-- ----------------------------INDEX----------------------------- -->
+        <!-- ---------------------------- INDEX ----------------------------- -->
 
         <section id="all-projects" class="index">
         <div class="projects">
