--- a/project.html
+++ b/project.html
@@ -16,10 +16,10 @@
         <section class="nav">
             <div class="navbar">
                 <div class="item1">
-                    <a href="#">mashup</a>
+                    <a href="./mashup.html">mashup</a>
                 </div>
                 <div class="item2">
-                    <a href="./index.html/#about">johanna ulfsak</a>
+                    <a href="./index.html">johanna ulfsak</a>
                 </div>
                 <div class="item3">
                     <a href="javascript:;" onclick="toggleProjects()">index</a>
@@ -62,7 +62,7 @@
             </div>
         </section>
 
-        <!-- ----------------------------INDEX----------------------------- -->
+        <!-- ---------------------------- INDEX ----------------------------- -->
 
         <section id="all-projects" class="index">
         <div class="projects">
@@ -72,137 +72,57 @@
                         <p class="numbers">2021</p>
                     </div>
                     <div class="title">
-                        <p class="letters"><a href="project.html">Cool Project</a></p>
+                        <p class="letters"><a href="./floorplan.html">Floor Plan</a></p>
                     </div>
                 </div>
             </div>
             <div class="project">
                 <div class=project-items>
                     <div class="year">
-                        <p class="numbers">2021</p>
+                        <p class="numbers">2020</p>
                     </div>
                     <div class="title">
-                        <p class="letters"><a href="#">Floor Plan</a></p>
+                        <p class="letters"><a href="./senora.html">SEÑORA</a></p>
                     </div>
                 </div>
             </div>
             <div class="project">
                 <div class=project-items>
                     <div class="year">
-                        <p class="numbers">2021</p>
+                        <p class="numbers">2020</p>
                     </div>
                     <div class="title">
-                        <p class="letters"><a href="#">Floor Plan</a></p>
+                        <p class="letters"><a href="./patterns.html">Patterns</a></p>
                     </div>
                 </div>
             </div>
             <div class="project">
                 <div class=project-items>
                     <div class="year">
-                        <p class="numbers">2021</p>
+                        <p class="numbers">2018</p>
                     </div>
                     <div class="title">
-                        <p class="letters"><a href="#">Floor Plan</a></p>
+                        <p class="letters"><a href="./irony.html">Ongoing scarf collection “QUO VADIS, IRONY?</a></p>
                     </div>
                 </div>
             </div>
             <div class="project">
                 <div class=project-items>
                     <div class="year">
-                        <p class="numbers">2021</p>
+                        <p class="numbers">2018</p>
                     </div>
                     <div class="title">
-                        <p class="letters"><a href="#">Floor Plan</a></p>
+                        <p class="letters"><a href="./saveas.html">Save As</a></p>
                     </div>
                 </div>
             </div>
             <div class="project">
                 <div class=project-items>
                     <div class="year">
-                        <p class="numbers">2021</p>
+                        <p class="numbers">2016</p>
                     </div>
                     <div class="title">
-                        <p class="letters"><a href="#">Floor Plan</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="project">
-                <div class=project-items>
-                    <div class="year">
-                        <p class="numbers">2021</p>
-                    </div>
-                    <div class="title">
-                        <p class="letters"><a href="#">Floor Plan</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="project">
-                <div class=project-items>
-                    <div class="year">
-                        <p class="numbers">2021</p>
-                    </div>
-                    <div class="title">
-                        <p class="letters"><a href="#">Floor Plan</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="project">
-                <div class=project-items>
-                    <div class="year">
-                        <p class="numbers">2021</p>
-                    </div>
-                    <div class="title">
-                        <p class="letters"><a href="#">Floor Plan</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="project">
-                <div class=project-items>
-                    <div class="year">
-                        <p class="numbers">2021</p>
-                    </div>
-                    <div class="title">
-                        <p class="letters"><a href="#">Floor Plan</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="project">
-                <div class=project-items>
-                    <div class="year">
-                        <p class="numbers">2021</p>
-                    </div>
-                    <div class="title">
-                        <p class="letters"><a href="#">Floor Plan</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="project">
-                <div class=project-items>
-                    <div class="year">
-                        <p class="numbers">2021</p>
-                    </div>
-                    <div class="title">
-                        <p class="letters"><a href="#">Floor Plan</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="project">
-                <div class=project-items>
-                    <div class="year">
-                        <p class="numbers">2021</p>
-                    </div>
-                    <div class="title">
-                        <p class="letters"><a href="#">Floor Plan</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="project">
-                <div class=project-items>
-                    <div class="year">
-                        <p class="numbers">2021</p>
-                    </div>
-                    <div class="title">
-                        <p class="letters"><a href="#">Floor Plan</a></p>
+                        <p class="letters"><a href="./la.html">The Next Great Fashion Designer LA</a></p>
                     </div>
                 </div>
             </div>
