--- a/web/static/masu.html
+++ b/web/static/masu.html
@@ -15,50 +15,118 @@
         <div class="masu-container">
             <div class="masu-items-wrapper">
                 <div class="masu-item">
-                    <img class="masu-img" src="img/_DSD9279.jpg" alt="imaage">
+                    <img class="masu-img" src="img/_DSE1427.jpg" alt="1">
                     <div class="masu-overlay">
                         <p class="masu-text">2010</p>
                     </div>
                 </div>
                 <div class="masu-item">
-                    <img class="masu-img" src="img/AE3A0093.JPG" alt="imaage">
-                    <div class="masu-overlay"></div>
+                    <img class="masu-img" src="img/2011__MG_0004.jpg" alt="2">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2011</p>
+                    </div>
                 </div>
                 <div class="masu-item">
-                    <img class="masu-img" src="img/_DSD9279.jpg" alt="imaage">
-                    <div class="masu-overlay"></div>
+                    <img class="masu-img" src="img/2011_skann_00126.jpg" alt="3">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2011</p>
+                    </div>
                 </div>
                 <div class="masu-item">
-                    <img class="masu-img" src="img/senora_Paravent_Old_Scar.png" alt="imaage">
-                    <div class="masu-overlay"></div>
+                    <img class="masu-img" src="img/2015_DSC_0520.JPG" alt="4">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2015</p>
+                    </div>
                 </div>
                 <div class="masu-item">
-                    <img class="masu-img" src="img/Photo29_28.jpg" alt="imaage">
-                    <div class="masu-overlay"></div>
+                    <img class="masu-img" src="img/2015_skann_0040.jpg" alt="5">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2015</p>
+                    </div>
                 </div>
                 <div class="masu-item">
-                    <img class="masu-img" src="img/Screenshot 2021-12-16 at 19.21.34.png" alt="imaage">
-                    <div class="masu-overlay"></div>
+                    <img class="masu-img" src="img/2015_skann_00076.jpg" alt="6">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2015</p>
+                    </div>
                 </div>
                 <div class="masu-item">
-                    <img class="masu-img" src="img/senora_view1.png" alt="imaage">
-                    <div class="masu-overlay"></div>
+                    <img class="masu-img" src="img/2015_TT87207.jpg" alt="7">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2015</p>
+                    </div>
                 </div>
                 <div class="masu-item">
-                    <img class="masu-img" src="img/senora_view2.png" alt="imaage">
-                    <div class="masu-overlay"></div>
+                    <img class="masu-img" src="img/2016_hat 04 view 2.jpg" alt="8">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2016</p>
+                    </div>
                 </div>
                 <div class="masu-item">
-                    <img class="masu-img" src="img/Screenshot 2021-09-15 at 00.33.39.png" alt="imaage">
-                    <div class="masu-overlay"></div>
+                    <img class="masu-img" src="img/2017_Photo14_14.jpg" alt="9">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2017</p>
+                    </div>
                 </div>
                 <div class="masu-item">
-                    <img class="masu-img" src="img/Screenshot 2021-12-13 at 19.54.07.png" alt="imaage">
-                    <div class="masu-overlay"></div>
+                    <img class="masu-img" src="img/2018_IMG_0548.JPG" alt="10">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2018</p>
+                    </div>
                 </div>
                 <div class="masu-item">
-                    <img class="masu-img" src="img/_DSD9279.jpg" alt="imaage">
-                    <div class="masu-overlay"></div>
+                    <img class="masu-img" src="img/2020_IMG_3536.jpg" alt="11">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2020</p>
+                    </div>
+                </div>
+                <div class="masu-item">
+                    <img class="masu-img" src="img/2020_Photo16_15.jpg" alt="12">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2020</p>
+                    </div>
+                </div>
+                <div class="masu-item">
+                    <img class="masu-img" src="img/2021_JOHANNA ULFSAK 25. oktoober 2021 S7_4049.jpg" alt="13">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2021</p>
+                    </div>
+                </div>
+                <div class="masu-item">
+                    <img class="masu-img" src="img/insp_a6284db001b730c64aa504fe9f721135.jpg" alt="14">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2010</p>
+                    </div>
+                </div>
+                <div class="masu-item">
+                    <img class="masu-img" src="img/insp3.jpg" alt="15">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2010</p>
+                    </div>
+                </div>
+                <div class="masu-item">
+                    <img class="masu-img" src="img/insp6.jpg" alt="16">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2010</p>
+                    </div>
+                </div>
+                <div class="masu-item">
+                    <img class="masu-img" src="img/process_IMG_5177.JPG" alt="17">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2010</p>
+                    </div>
+                </div>
+                <div class="masu-item">
+                    <img class="masu-img" src="img/yarns_IMG_1882.JPG" alt="18">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2010</p>
+                    </div>
+                </div>
+                <div class="masu-item">
+                    <img class="masu-img" src="img/yarns_Photo14_c13.jpg" alt="19">
+                    <div class="masu-overlay">
+                        <p class="masu-text">2010</p>
+                    </div>
                 </div>
             </div>
         </div>
